--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   http: ^0.13.5
   localstore: ^1.3.5
   searchfield: ^0.7.5
+  fluttertoast: ^8.2.1
+  pdf: ^3.9.0
+  open_file: ^3.2.1
 
 dev_dependencies:
   flutter_test:
